[tool.poetry]
name = "rt_pie"
version = "0.1.4"
description = "Real Rime PItch Estimator"
authors = ["Kaspar Wolfisberg", "Luca Di Lanzo"]
readme = "README.md"
homepage = "https://github.com/wolfisberg/rt-pie"
repository = "https://github.com/wolfisberg/rt-pie"

[tool.poetry.dependencies]
python = "~3.8"
numpy = "~1.19"
mir_eval = "^0.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
